@@ -4,6 +4,7 @@ import model.Course;
 import repository.courseRepository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class courseService {
     private final courseRepository repo;
@@ -13,23 +14,25 @@ public class courseService {
     }
 
     public boolean addCourse(Course c) {
-        if (repo.findById(c.getCode()).isPresent()) return false;
-        repo.add(c);
-        return true;
+        return repo.add(c);
     }
-    public boolean updateCourse(String id, Course c) {
-        return repo.update(c);
+
+    public boolean updateCourse(String code, Course updated) {
+        var existing = repo.findById(code).orElse(null);
+        if (existing == null) return false;
+        updated.setCode(code);
+        return repo.update(updated);
     }
-    public boolean deleteCourse(String id) {
-        return repo.delete(id);
+
+    public boolean deleteCourse(String code) {
+        return repo.delete(code);
     }
+
     public List<Course> search(String keyword) {
-        keyword = keyword.toLowerCase();
-        String finalKeyword = keyword;
         return repo.getAll().stream()
-                .filter(c -> c.getCode().toLowerCase().contains(finalKeyword)
-                        || c.getName().toLowerCase().contains(finalKeyword))
-                .toList();
+                .filter(c -> c.getCode().toLowerCase().contains(keyword.toLowerCase()) ||
+                        c.getName().toLowerCase().contains(keyword.toLowerCase()))
+                .collect(Collectors.toList());
     }
 
     public List<Course> getAll() {
